--- a/index.html
+++ b/index.html
@@ -4,37 +4,73 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Art Hair Salah</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: url('resources/logo.png') no-repeat center center fixed;
+      background-size: cover;
+      min-height: 100vh;
+      position: relative;
+    }
+    .overlay {
+      background-color: rgba(0,0,0,0.6);
+      position: absolute;
+      top:0;left:0;
+      width:100%;
+      height:100%;
+      z-index:-1;
     }
     h1 {
-      margin-bottom: 40px;
-      color: #333;
+      margin-top: 30px;
+      font-family: 'Playfair Display', serif;
+      font-size: 42px;
+      color: #FFD700;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
     }
     .button {
-      display: block;
-      width: 200px;
-      margin: 20px auto;
-      padding: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 220px;
+      margin: 12px auto;
+      padding: 12px;
       text-decoration: none;
       color: white;
-      background-color: #222;
-      border-radius: 5px;
+      background-color: #ff9900;
+      border-radius: 6px;
       font-size: 18px;
+      transition: transform 0.2s, background-color 0.3s;
     }
     .button:hover {
-      background-color: #555;
+      background-color: #e68a00;
+      transform: scale(1.05);
+    }
+    .button img {
+      width: 24px;
+      height: 24px;
+      margin-right: 10px;
     }
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
   <h1>Art Hair Salah</h1>
-  <a class="button" href="tel:+213773317319">📞 Call Now</a>
-  <a class="button" href="https://www.instagram.com/art_hair_salah" target="_blank">📷 Instagram</a>
-  <a class="button" href="https://www.tiktok.com/@arthair_salah?is_from_webapp=1&sender_device=pc" target="_blank">🎵 TikTok</a>
+  <a class="button" href="tel:+213773317319">
+    📞 Call Now
+  </a>
+  <a class="button" href="https://www.instagram.com/art_hair_salah" target="_blank">
+    <img src="resources/Instagram.png" alt="Instagram icon"/> Instagram
+  </a>
+  <a class="button" href="https://www.tiktok.com/@arthair_salah?is_from_webapp=1&sender_device=pc" target="_blank">
+    <img src="resources/TikTok.png" alt="TikTok icon"/> TikTok
+  </a>
 </body>
 </html>
