--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      padding-top: 60px;
       background: url('resources/logo.png') no-repeat center center fixed;
       background-size: cover;
       min-height: 100vh;
