--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 </head>
 <body>
   <div class="overlay"></div>
-  <h1>Art Hair Salah</h1>
+  <h1>Arthair chez salah</h1>
   <a class="button" href="tel:+213773317319">
     📞 Call Now
   </a>
   <a class="button" href="https://www.instagram.com/art_hair_salah" target="_blank">
     <img src="resources/Instagram.png" alt="Instagram icon"/> Instagram
   </a>
-  <a class="button" href="https://www.tiktok.com/@arthair_salah?is_from_webapp=1&sender_device=pc" target="_blank">
+  <a class="button" href="https://www.tiktok.com/@salah_arthair" target="_blank">
     <img src="resources/TikTok.png" alt="TikTok icon"/> TikTok
   </a>
 </body>
