--- a/index.html
+++ b/index.html
@@ -73,5 +73,8 @@
   <a class="button" href="https://www.tiktok.com/@salah_arthair" target="_blank">
     <img src="resources/TikTok.png" alt="TikTok icon"/> TikTok
   </a>
+  <a class="button" href="https://maps.app.goo.gl/JreLYzCsHKeKAu9G7" target="_blank">
+    <img src="resources/Maps.png" alt="Maps icon"/> Localisation
+  </a>
 </body>
 </html>
