--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       height: 24px;
       margin-right: 10px;
     }
+    .menu-image {
+      margin-top: 30px;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 12px;
+      box-shadow: 0 0 25px 10px rgba(255, 153, 0, 0.3);
+    }
   </style>
 </head>
 <body>
@@ -76,5 +83,8 @@
   <a class="button" href="https://maps.app.goo.gl/JreLYzCsHKeKAu9G7" target="_blank">
     <img src="resources/Maps.png" alt="Maps icon"/> Localisation
   </a>
+
+  <!-- Price Menu Image -->
+  <img class="menu-image" src="resources/Menu.png" alt="Price Menu"/>
 </body>
 </html>
